--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <mat-toolbar color="primary">
-    <span>Estoque</span>
+  <span>Estoque Etec</span>
+  <div class="links">
+    <a routerLink="/">Home</a>
+    <a routerLink="/categoria">Categoria</a>
+  </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
